[package]
name = "siwe-token"
version = "0.1.0"
edition = "2021"
description = "SIWE token CLI for agent authentication — prepare, encode, decode, verify, auth"
license = "MIT"

[dependencies]
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
siwe = "0.6"
uuid = { version = "1", features = ["v4"] }
